<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomerInfoFragment">

    <TextView
        android:id="@+id/fragment_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/customer_fragment"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/text_amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/button_proceed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fragment_title"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/checkbox_image"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_baseline_check_circle_24"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/button_proceed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fragment_title"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="7"
        android:importantForAutofill="no"
        android:minHeight="48dp"
        android:textSize="18sp"
        android:text="Ödenecek Tutar:\n #.## TL"
        app:layout_constraintEnd_toStartOf="@+id/button_proceed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_proceed" />

    <Button
        android:id="@+id/button_proceed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/proceed_payment"
        android:textAllCaps="false"
        app:layout_constraintStart_toEndOf="@+id/text_amount"
        app:layout_constraintTop_toBottomOf="@id/progress_bar"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/qr_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="313dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_amount"
        app:layout_constraintVertical_bias="0.042" />

    <Button
        android:id="@+id/button_go_to_pos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/return_to_pos"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/button_proceed"
        app:layout_constraintStart_toStartOf="@+id/button_proceed"
        app:layout_constraintTop_toBottomOf="@+id/button_proceed" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_history"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/history_recycler_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/history_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:background="@drawable/border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>